[project]
name = "pypism"
version = "0.1.0"
maintainers = [{name = "Andy Aschwanden", email = "andy.aschwanden@gmail.com"}]
description = """Tools for pre- and postprocessing of PISM results"""
readme = "README.md"
requires-python = ">3.8"
license = {text = "GPL 3.0"}
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Postprocessing",
        ]
dynamic = ["dependencies"]

[project.scripts]
profile-analysis = "pypism:profile_analysis"

[tool.setuptools.packages.find]
include = ["pypism"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["pypism"]

[tool.poetry]
name = "pypism"
version = "0.1.0"
description = """Tools for pre- and postprocessing of PISM results"""
authors = ["Andy Aschwanden <andy.aschwanden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gdal = ">=3.7.2"
geopandas = ">=0.14.0"
joblib = ">=1.3.2"
matplotlib = ">=3.8.0"
pandas = ">=1.5.3"
shapely = ">=2.0.2"
xarray = "^2022.10.0"
pyogrio = "^0.7.2"
pyarrow = "^14.0.0"
tqdm = "^4.66.1"

[tool.poetry.urls]

"homepage" = "https://github.com/pism/pypism"
"repository" = "https://github.com/pism/pypism"
"bug tracker" = "https://github.com/pism/pypism/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.pycodestyle]
max-line-length = 119
exclude = [
    ".tox",
    ".git",
    "*/migrations/*",
    ".mypy_cache",
    ".pytest_cache",
    "*__init__.py",
    "venv"
    ]

[tool.mypy]
python_version = 3.11
check_untyped_defs = "True"
ignore_missing_imports = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
exclude = ["pypism/profile_analysis.py"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | conda
    | docs
 )/
'''

[tool.pylint.messages_control]
disable = """
    too-many-lines,
    no-else-return,
    bare-except
"""

[tool.pylint.format]
max-line-length = 120
