[project]
name = "glacier-flow-tools"
version = "0.1.1"
maintainers = [{name = "Andy Aschwanden", email = "andy.aschwanden@gmail.com"}]
description = """Tools for analysing glacier flow."""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL 3.0"}
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering :: Postprocessing",
        ]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[project.scripts]
compute_pathlines = "glacier_flow_tools.pathlines:compute_pathlines"
compute_profiles = "glacier_flow_tools.profiles:compute_profiles"

[tool.setuptools.packages.find]
include = ["glacier_flow_tools"]

[tool.setuptools.package-data]
"glacier_flow_tools" = ['data/*.txt', 'data/*.gpkg', 'data/*.toml']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
py-modules = ["glacier_flow_tools"]

[tool.setuptools.cmdclass]
build_py = "build.build_py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]

[tool.pycodestyle]
max-line-length = 119
exclude = [
    ".tox",
    ".git",
    "*/migrations/*",
    ".mypy_cache",
    ".pytest_cache",
    "*__init__.py",
    "venv"
    ]

[tool.mypy]
python_version = 3.11
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = "True"
ignore_missing_imports = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | conda
    | docs
 )/
'''

[tool.pylint.messages_control]
disable = """
    too-many-lines,
    no-else-return,
    bare-except,
    import-outside-toplevel,
    redefined-outer-name
"""

[tool.pylint.format]
max-line-length = 120
